force-app/main/default/objects/Crew_Appraisal_Form_Criteria__mdt/Crew_Appraisal_Form_Criteria__mdt.object-meta.xml
<CustomObject>
    <label>Crew Appraisal Form Criteria</label>
    <pluralLabel>Crew Appraisal Form Criterias</pluralLabel>
</CustomObject>