force-app/main/default/objects/Crew_Appraisal_Form_Criteria__mdt/fields/Evaluated_Rank__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_Rank__c</fullName>
    <label>Evaluated Rank</label>
    <length>8</length>
    <type>Text</type>
</CustomField>