force-app/main/default/objects/Crew_Appraisal_Form_Criteria__mdt/fields/Evaluator_Rank__c.field-meta.xml
<CustomField>
    <fullName>Evaluator_Rank__c</fullName>
    <label>Evaluator Rank</label>
    <length>8</length>
    <type>Text</type>
</CustomField>