force-app/main/default/objects/Crew_Appraisal_Form_Criteria__mdt/fields/Form_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Form_Numbers__c</fullName>
    <label>Form Numbers</label>
    <length>128</length>
    <type>Text</type>
</CustomField>